tests/error/error06.nex
fun f()
{
   this.x = true;
}

f();
